# practice_project

./: .gitignore
c/lib_srcs/lib_queue/: Makefile  Makefile.in
c/old_practice/work_srcs/socket/libsrcs/logout/: CMakeLists.txt  logout.c  logout.h
c/old_practice/work_srcs/socket/server/: CMakeLists.txt
c/old_practice/work_srcs/socket/server/cli_sqlite3/: cli_sqlite3.h
c/old_practice/work_srcs/socket/server/server_epoll/: server_epoll.c  server_epoll.h
c/old_practice/work_srcs/socket/server/server_msgqueue/: server_msgqueue.h
c/old_practice/work_srcs/socket/server/server_socket/: server_socket.h  server_tcp.h
c/practice/test/: test.c
c/practice_srcs/sort_algo/: bubble_sort.c  bubble_sort.h  selection_sort.c  test.c
c/work_srcs/socket/: CMakeLists.txt  inc.cmake
c/work_srcs/socket/client/: CMakeLists.txt  client.c  client.h
c/work_srcs/socket/client/client_interface/: client_interface.c
c/work_srcs/socket/client/client_pool/: client_pool.c  client_pool.h
c/work_srcs/socket/client/client_socket/: client_socket.c  client_socket.h  client_tcp.c  client_tcp.h  client_udp.c  client_udp.h
c/work_srcs/socket/common/pre_modules/: pre_modules.c  pre_modules.h
c/work_srcs/socket/common/sock_msg/: sock_msg.h
c/work_srcs/socket/common/sock_msg/msg_queue/: msg_queue.c  msg_queue.h
c/work_srcs/socket/common/thread_pool/: thread_pool.c
c/work_srcs/socket/common/thread_pool/task_queue/: task_queue.c  task_queue.h
c/work_srcs/socket/libsrcs/: CMakeLists.txt
c/work_srcs/socket/libsrcs/logout/: CMakeLists.txt  logout.c  logout.h
c/work_srcs/socket/server/: CMakeLists.txt  server.c  server.h
c/work_srcs/socket/server/cli_sqlite3/: cli_sqlite3.c  cli_sqlite3.h
c/work_srcs/socket/server/server_epoll/: server_epoll.c  server_epoll.h
c/work_srcs/socket/server/server_msgqueue/: server_msgqueue.c  server_msgqueue.h
c/work_srcs/socket/server/server_pool/: server_pool.c  server_pool.h
c/work_srcs/socket/server/server_socket/: server_socket.c  server_socket.h  server_tcp.c  server_tcp.h  server_udp.c  server_udp.h
c/work_srcs/socket_tcp/: include.mk
c/work_srcs/socket_udp/: CMakeLists.txt  include.cmake  toolchain.cmake
c/work_srcs/socket_udp/client/: CMakeLists.txt  client.c  client.h
c/work_srcs/socket_udp/client/client_dbgout/: client_dbgout.c  client_dbgout.h
c/work_srcs/socket_udp/client/client_interface/: client_interface.c
c/work_srcs/socket_udp/client/client_lcmsgqueue/: client_lcmsgqueue.c  client_lcmsgqueue.h
c/work_srcs/socket_udp/client/client_threadpool/: client_threadpool.c  client_threadpool.h
c/work_srcs/socket_udp/client/client_udp/: client_udp.c  client_udp.h
c/work_srcs/socket_udp/common/lcmsg/: lcmsg.c  lcmsg.h
c/work_srcs/socket_udp/common/lcmsg/lcmsg_queue/: lcmsg_queue.c  lcmsg_queue.h
c/work_srcs/socket_udp/common/local_api/: normal_api.h  safe_api.c  safe_api.h
c/work_srcs/socket_udp/common/pre_process/: pre_process.c  pre_process.h
c/work_srcs/socket_udp/common/thread_pool/: thread_pool.c  thread_pool.h
c/work_srcs/socket_udp/common/thread_pool/task_queue/: task_queue.c  task_queue.h
c/work_srcs/socket_udp/server/: CMakeLists.txt  server.c
c/work_srcs/socket_udp/server/clientinfo_list/: clientinfo_list.c  clientinfo_list.h
c/work_srcs/socket_udp/server/server_dbgout/: server_dbgout.c
c/work_srcs/socket_udp/server/server_epoll/: server_epoll.c  server_epoll.h
c/work_srcs/socket_udp/server/server_lcmsgqueue/: server_lcmsgqueue.c  server_lcmsgqueue.h
c/work_srcs/socket_udp/server/server_threadpool/: server_threadpool.c  server_threadpool.h
c/work_srcs/socket_udp/server/server_udp/: server_udp.c  server_udp.h
(+86 files in other folders)
